fixed toggle issue on projects, added new menu logo, fixed about page overflow, played with font

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   body {
-    font-family: "Uncial Antiqua", serif;
+    font-family: "Glass Antiqua", serif;
     font-weight: 400;
     font-style: normal;
   }
@@ -24,21 +24,12 @@
   }
 
   .hamburger {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     display: flex;
-    justify-content: space-around;
-    flex-flow: column nowrap;
     z-index: 99;
     }
 
-    .burger {
-      width: 2rem;
-      height: 0.25rem;
-      border-radius: 10px;
-      background: linear-gradient(to bottom left, cyan, pink, orange);
-  
-    }
 
 }
 
